# magimocha

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
magimocha/: CMakeLists.txt  magimocha.cpp  magimocha.h
magimocha-ast/: CMakeLists.txt
magimocha-ast/magimocha/: ast-visitor.h  ast-walker.h  ast.h  parser.h  type.h
magimocha-llvm/: CMakeLists.txt
magimocha-llvm/magimocha/: unicode.h
magimocha-llvm/magimocha/codegen/: codegen.cpp  codegen.h  llvm-type.cpp  llvm-type.h  pass.cpp  pass.h  scope.cpp  scope.h  visitor.cpp  visitor.h
magimocha-llvm/magimocha/llvm/: codegen.cpp  codegen.h  scope.h  visitor.h
magimocha-llvm2/: CMakeLists.txt  main.cpp
magimocha-llvm2/magimocha/: unicode.h
magimocha-llvm2/magimocha/codegen/: codegen.cpp  codegen.h
magimocha-test/: CMakeLists.txt  magimocha-test.cpp  main.cpp  main2.cpp  testutil.h  typing-test.cpp
magimocha-test/res/: multi_line.txt
magimocha-typer/: CMakeLists.txt  helper.h
magimocha-typer/magimocha/: convert-ast.h  operation.cpp  operation.h  register-name.cpp  register-name.h  typing.cpp  typing.h
